--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc -p ./tsconfig.json"
+    "build": "tsc -p ./tsconfig.json",
+    "serve": "node src/demo/js/server.js"
   },
   "keywords": [
     "TinyMCE",
@@ -14,8 +15,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "express": "^4.17.1",
+    "tinymce": "npm:tinymce@^5.4.0",
     "ts-loader": "^8.0.1",
-    "typescript": "^3.9.7",
-    "tinymce": "npm:tinymce@^5.4.0"
+    "typescript": "^3.9.7"
   }
 }
