--- a/package.json
+++ b/package.json
@@ -15,10 +15,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@ephox/swag": "^4.3.1",
     "express": "^4.17.1",
     "rollup": "^2.23.1",
     "tinymce": "npm:tinymce@^5.4.0",
     "ts-loader": "^8.0.1",
     "typescript": "^3.9.7"
+  },
+  "dependencies": {
+    "@ephox/katamari": "^6.1.1"
   }
 }
