--- a/package.json
+++ b/package.json
@@ -1,20 +1,34 @@
 {
-  "name": "@tinymce/tinymce-wc",
+  "name": "@tinymce/tinymce-webcomponent",
   "version": "1.0.0",
   "description": "Official TinyMCE web-component",
-  "main": "dist/tinymce-wc.js",
+  "repository": {
+    "url": "https://github.com/tinymce/tinymce-webcomponent"
+  },
+  "files": [
+    "dist",
+    "CHANGELOG.md",
+    "README.md",
+    "LICENSE.txt"
+  ],
+  "main": "dist/tinymce-webcomponent.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "bedrock-auto -b chrome-headless -d src/test/ts",
     "build": "tsc -p ./tsconfig.json && rollup -c rollup.config.js",
-    "serve": "node src/demo/js/server.js"
+    "serve": "node src/demo/js/server.js",
+    "prepare": "yarn run build"
   },
   "keywords": [
     "TinyMCE",
     "web-component"
   ],
-  "author": "",
-  "license": "ISC",
+  "author": "Tiny Technologies",
+  "license": "Apache-2.0",
   "devDependencies": {
+    "@ephox/agar": "^4.17.2",
+    "@ephox/bedrock-client": "^9.6.1",
+    "@ephox/bedrock-server": "^9.6.3",
+    "@ephox/sugar": "^6.1.3",
     "@ephox/swag": "^4.3.1",
     "express": "^4.17.1",
     "rollup": "^2.23.1",
