--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tinymce/tinymce-webcomponent",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Official TinyMCE web-component",
   "repository": {
     "url": "https://github.com/tinymce/tinymce-webcomponent"
@@ -28,15 +28,14 @@
     "@ephox/agar": "^4.17.2",
     "@ephox/bedrock-client": "^9.6.1",
     "@ephox/bedrock-server": "^9.6.3",
-    "@ephox/katamari": "^6.1.1",
+    "@ephox/katamari": "^6.1.2",
     "@ephox/sugar": "^6.1.3",
     "@ephox/swag": "^4.3.1",
     "express": "^4.17.1",
-    "rollup": "^2.23.1",
+    "rollup": "^2.28.1",
     "tinymce": "npm:tinymce@^5.4.0",
-    "ts-loader": "^8.0.1",
-    "typescript": "^3.9.7"
+    "ts-loader": "^8.0.4",
+    "typescript": "^4.0.3"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
