--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@ephox/katamari": "^6.1.2",
     "@ephox/sugar": "^6.1.3",
     "@ephox/swag": "^4.3.1",
+    "@tinymce/beehive-flow": "^0.8.0",
     "express": "^4.17.1",
     "rollup": "^2.28.1",
     "tinymce": "npm:tinymce@^5.4.0",
