--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "scripts": {
     "test": "bedrock-auto -b chrome-headless -d src/test/ts",
     "build": "tsc -p ./tsconfig.json && rollup -c rollup.config.js",
+    "lint": "yarn eslint src/**/*.ts",
     "serve": "node src/demo/js/server.js",
     "prepare": "yarn run build"
   },
@@ -32,6 +33,8 @@
     "@ephox/sugar": "^6.1.3",
     "@ephox/swag": "^4.3.1",
     "@tinymce/beehive-flow": "^0.8.0",
+    "@tinymce/eslint-plugin": "^1.7.2",
+    "eslint": "^7.17.0",
     "express": "^4.17.1",
     "rollup": "^2.28.1",
     "tinymce": "npm:tinymce@^5.4.0",
