--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "eslint": "^7.17.0",
     "express": "^4.17.1",
     "rollup": "^2.28.1",
-    "tinymce": "npm:tinymce@^5.6.0",
+    "tinymce": "^5.6.0",
     "ts-loader": "^8.0.13",
     "typescript": "^4.0.3"
   },
