--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,11 @@
     "no-underscore-dangle": "off",
     "@typescript-eslint/explicit-member-accessibility": "off",
     "@tinymce/prefer-fun": "off",
-    "@typescript-eslint/member-ordering": "off"
+    "@typescript-eslint/member-ordering": "off",
+    "quote-props": [
+      2,
+      "as-needed",
+      { "keywords": true }
+    ]
   }
 }
