--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "test": "bedrock-auto -b chrome-headless -d src/test/ts",
     "build": "tsc -p ./tsconfig.json && rollup -c rollup.config.js",
     "lint": "yarn eslint src/**/*.ts",
-    "serve": "node src/demo/js/server.js",
-    "prepare": "yarn run build"
+    "serve": "yarn ts-node -r esm src/demo/ts/Server.ts"
   },
   "keywords": [
     "TinyMCE",
@@ -34,11 +33,16 @@
     "@ephox/swag": "^4.3.1",
     "@tinymce/beehive-flow": "^0.8.0",
     "@tinymce/eslint-plugin": "^1.7.2",
+    "@types/esm": "^3.2.0",
+    "@types/express": "^4.17.9",
+    "@types/node": "^14.14.20",
     "eslint": "^7.17.0",
+    "esm": "^3.2.25",
     "express": "^4.17.1",
     "rollup": "^2.28.1",
     "tinymce": "^5.6.0",
     "ts-loader": "^8.0.13",
+    "ts-node": "^9.1.1",
     "typescript": "^4.0.3"
   },
   "dependencies": {}
