--- a/package.json
+++ b/package.json
@@ -1,6 +1,4 @@
 {
-  "name": "@tinymce/tinymce-webcomponent",
-  "version": "1.1.0-alpha",
   "description": "Official TinyMCE Web Component",
   "repository": {
     "url": "https://github.com/tinymce/tinymce-webcomponent"
@@ -45,5 +43,7 @@
     "ts-node": "^9.1.1",
     "typescript": "^4.0.3"
   },
-  "dependencies": {}
+  "dependencies": {},
+  "version": "1.1.0-rc",
+  "name": "@tinymce/tinymce-webcomponent"
 }
