--- a/package.json
+++ b/package.json
@@ -44,6 +44,6 @@
     "typescript": "^4.0.3"
   },
   "dependencies": {},
-  "version": "1.1.0-rc",
+  "version": "1.1.0",
   "name": "@tinymce/tinymce-webcomponent"
 }
