--- a/package.json
+++ b/package.json
@@ -44,6 +44,6 @@
     "typescript": "^4.2.3"
   },
   "dependencies": {},
-  "version": "1.2.0",
+  "version": "1.2.1-rc",
   "name": "@tinymce/tinymce-webcomponent"
 }
