--- a/package.json
+++ b/package.json
@@ -23,25 +23,25 @@
   "author": "Tiny Technologies",
   "license": "Apache-2.0",
   "devDependencies": {
-    "@ephox/agar": "^5.2.1",
-    "@ephox/bedrock-client": "^11.1.1",
-    "@ephox/bedrock-server": "^11.2.0",
-    "@ephox/katamari": "^7.1.3",
-    "@ephox/sugar": "^7.1.1",
+    "@ephox/agar": "^5.3.1",
+    "@ephox/bedrock-client": "^11.3.0",
+    "@ephox/bedrock-server": "^11.3.0",
+    "@ephox/katamari": "^7.2.1",
+    "@ephox/sugar": "^7.1.3",
     "@ephox/swag": "^4.3.1",
     "@tinymce/beehive-flow": "^0.15.0",
-    "@tinymce/eslint-plugin": "^1.7.2",
+    "@tinymce/eslint-plugin": "^1.8.2",
     "@types/esm": "^3.2.0",
-    "@types/express": "^4.17.11",
-    "@types/node": "^15.0.1",
-    "eslint": "^7.25.0",
+    "@types/express": "^4.17.12",
+    "@types/node": "^15.12.2",
+    "eslint": "^7.28.0",
     "esm": "^3.2.25",
     "express": "^4.17.1",
-    "rollup": "^2.46.0",
+    "rollup": "^2.51.1",
     "tinymce": "^5.7.1",
-    "ts-loader": "^9.1.1",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.2.4"
+    "ts-loader": "^9.2.3",
+    "ts-node": "^10.0.0",
+    "typescript": "~4.2.4"
   },
   "dependencies": {},
   "version": "1.2.1-rc",
