--- a/package.json
+++ b/package.json
@@ -23,25 +23,30 @@
   "author": "Tiny Technologies",
   "license": "Apache-2.0",
   "devDependencies": {
-    "@ephox/agar": "^5.3.1",
-    "@ephox/bedrock-client": "^11.3.0",
-    "@ephox/bedrock-server": "^11.3.0",
-    "@ephox/katamari": "^7.2.1",
-    "@ephox/sugar": "^7.1.3",
-    "@ephox/swag": "^4.3.1",
-    "@tinymce/beehive-flow": "^0.15.0",
-    "@tinymce/eslint-plugin": "^1.8.2",
+    "@ephox/agar": "^6.0.3",
+    "@ephox/bedrock-client": "^12.0.0",
+    "@ephox/bedrock-server": "^12.1.1",
+    "@ephox/katamari": "^8.1.1",
+    "@ephox/sugar": "^8.1.1",
+    "@ephox/swag": "^4.4.0",
+    "@tinymce/beehive-flow": "^0.17.0",
+    "@tinymce/eslint-plugin": "^1.9.2",
     "@types/esm": "^3.2.0",
-    "@types/express": "^4.17.12",
-    "@types/node": "^15.12.2",
-    "eslint": "^7.28.0",
+    "@types/express": "^4.17.13",
+    "@types/node": "^16.10.4",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
+    "eslint": "^8.0.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-mocha": "^9.0.0",
+    "eslint-plugin-prefer-arrow": "^1.2.3",
     "esm": "^3.2.25",
     "express": "^4.17.1",
-    "rollup": "^2.51.1",
-    "tinymce": "^5.7.1",
-    "ts-loader": "^9.2.3",
-    "ts-node": "^10.0.0",
-    "typescript": "~4.2.4"
+    "rollup": "^2.58.0",
+    "tinymce": "^5.10.0",
+    "ts-loader": "^9.2.6",
+    "ts-node": "^10.3.0",
+    "typescript": "~4.4.4"
   },
   "dependencies": {},
   "version": "1.2.1-rc",
