--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
     "@typescript-eslint/parser": "^5.13.0",
     "eslint": "^8.10.0",
     "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-mocha": "^10.0.3",
     "eslint-plugin-prefer-arrow": "^1.2.3",
     "esm": "^3.2.25",
     "express": "^4.17.3",
@@ -46,7 +45,8 @@
     "tinymce": "^5.10.0",
     "ts-loader": "^9.2.7",
     "ts-node": "^10.6.0",
-    "typescript": "~4.6.2"
+    "typescript": "~4.6.2",
+    "webpack": "^5.0.0"
   },
   "dependencies": {},
   "version": "1.2.1-rc",
