--- a/package.json
+++ b/package.json
@@ -49,6 +49,6 @@
     "webpack": "^5.70.0"
   },
   "dependencies": {},
-  "version": "2.0.0",
+  "version": "2.0.1-rc",
   "name": "@tinymce/tinymce-webcomponent"
 }
