--- a/package.json
+++ b/package.json
@@ -49,6 +49,6 @@
     "webpack": "^5.73.0"
   },
   "dependencies": {},
-  "version": "2.0.1",
+  "version": "2.0.2-rc",
   "name": "@tinymce/tinymce-webcomponent"
 }
