--- a/package.json
+++ b/package.json
@@ -49,6 +49,6 @@
     "webpack": "^5.75.0"
   },
   "dependencies": {},
-  "version": "2.1.0-rc",
+  "version": "2.1.0",
   "name": "@tinymce/tinymce-webcomponent"
 }
