Update devDependencies in package.json

--- a/package.json
+++ b/package.json
@@ -23,17 +23,17 @@
   "author": "Tiny Technologies",
   "license": "MIT",
   "devDependencies": {
-    "@ephox/agar": "^7.4.1",
-    "@ephox/bedrock-client": "^13.0.0",
-    "@ephox/bedrock-server": "^13.3.0",
+    "@ephox/agar": "^8.0.1",
+    "@ephox/bedrock-client": "^14.1.1",
+    "@ephox/bedrock-server": "^15.0.0-alpha.4",
     "@ephox/katamari": "^9.1.5",
     "@ephox/sugar": "^9.2.1",
     "@ephox/swag": "^4.6.0",
     "@tinymce/beehive-flow": "^0.19.0",
     "@tinymce/eslint-plugin": "^2.2.1",
     "@types/esm": "^3.2.0",
-    "@types/express": "^4.17.15",
-    "@types/node": "^18.11.18",
+    "@types/express": "^5.0.0",
+    "@types/node": "^22.7.7",
     "@typescript-eslint/eslint-plugin": "^5.48.2",
     "@typescript-eslint/parser": "^5.48.2",
     "eslint": "^8.32.0",
@@ -41,11 +41,11 @@
     "eslint-plugin-prefer-arrow": "^1.2.3",
     "esm": "^3.2.25",
     "express": "^4.18.2",
-    "rollup": "^3.20.1",
-    "tinymce": "^6.3.1",
+    "rollup": "^4.24.0",
+    "tinymce": "^7.4.1",
     "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
-    "typescript": "~5.0.2",
+    "typescript": "~5.6.3",
     "webpack": "^5.75.0"
   },
   "dependencies": {},
