--- a/package.json
+++ b/package.json
@@ -51,6 +51,6 @@
   "dependencies": {
     "@tinymce/miniature": "^6.0.0"
   },
-  "version": "2.2.0",
+  "version": "2.2.1-rc",
   "name": "@tinymce/tinymce-webcomponent"
 }
