INT-3366: Revert changelog to patch

--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "description": "Official TinyMCE Web Component",
+  "version": "2.3.2-rc",
+  "name": "@tinymce/tinymce-webcomponent",
   "repository": {
     "url": "https://github.com/tinymce/tinymce-webcomponent"
   },
@@ -51,7 +53,5 @@
   },
   "dependencies": {
     "@tinymce/miniature": "^6.0.0"
-  },
-  "version": "2.3.2-rc",
-  "name": "@tinymce/tinymce-webcomponent"
+  }
 }
