--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "description": "Official TinyMCE Web Component",
-  "version": "2.3.2",
+  "version": "2.3.3-rc",
   "name": "@tinymce/tinymce-webcomponent",
   "repository": {
     "url": "https://github.com/tinymce/tinymce-webcomponent"
